--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -23,12 +25,13 @@
       "prettier"
     ],
     "rules": {
+      "import/prefer-default-export": 0,
       "react/prefer-stateless-function": 0,
       "react/jsx-filename-extension": 0,
       "react/jsx-one-expression-per-line": 0,
       "react/jsx-props-no-spreading": 0,
       "react/prop-types": 0,
-      "react/destructuring-assignment": "off"
+      "react/destructuring-assignment": 0
     },
     "env": {
       "browser": true
